package org.example.ProtoypeDaniel;

public class BoekVluchtDTO {
    private Vlucht vlucht;
    private String username;

    public Vlucht getVlucht() {
        return vlucht;
    }

    public void setVlucht(Vlucht vlucht) {
        this.vlucht = vlucht;
    }

    public String getUsername() {
        return username;
    }

    public void setUsername(String username) {
        this.username = username;
    }
}
